Revision history for Perl extension DBIx::Skinny

0.0730
   2010-XX-XX
        - MOD : add load_class method.
        - ADD : add_where_raw method for Skinny::SQL (thanks nihen)
        - MOD : Iterator's no_cache method has been deprecated. use cache method instead.
        - ADD : add find_or_create's knowun bug notice message.
        - ADD : refetch method for DBIx::Skinny::Row.

0.0729
   2010-11-30
        - FIXED : _mk_row_class bug fixed. (report thanks nihen)

0.0728
   2010-11-30
        - MOD   : remove DBIx::Skinny::Accessor. use Class::Accessor::Lite.
        - MOD   : DEPRECATED update_by_sql/delete_by_sql methods.
        - MOD   : no create anon row class.
        - MOD   : specific row class name for Schema.pm
        - MOD   : get now connection info from connect_info method.

0.0727
   2010-11-09
        - ADD   : hash_to_row class.
        - MOD   : DBIx::Skinny::attribute method rename DBIx::Skinny::_attributes. [INCOMPATIBLE CHANGE]
        - ADD   : auto create Row class mode.
        - MOD   : no eval for txn_*. (thanks tokuhirom)

0.0726
   2010-11-02
        - ADD   : disconnect method.(thanks lestrrat)
        - FIXED : tweak English (thanks lestrrat)

0.0725
   2010-10-28
        - ADD   : add handle method for DBIx::Skinny::Row.
        - MOD   : DBIx::Skinny did inherits without doing export.
        - FIXED : don't warn on pk-less tables.(thanks lestrrat)
        - MOD   : allow setting the name of the schema at use DBIx::Skinny time (thanks lestrrat)
        - MOD   : change setup to connect_info. setup now warns, and is aliased to connect_info (thanks lestrrat)
        - MOD   : change where profiler is set, also now respect SKINNY_PROFILE env var (thanks lestrrat)
        - ADD   : add ARCHITECTURE document.(thanks lestrrat)

0.0724
   2010-10-26
        - FIXED : find_or_create multi pk bug (thanks tokuhirom)

0.0723
   2010-10-25
        - MOD : more infomation for no selected column error.